--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.12.5",
     "axios": "^1.6.3",
     "bootstrap": "^5.3.2",
+    "classnames": "^2.5.1",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
